--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
             <h3><span id="computerScore">0</span> Points</h3>
         </div>
     </section>
+    <section>
+        <h2>Game Log!</h2>
+        <div id="gameLog"></div>
+    </section>
     <script src="js/script.js"></script>
 </body>
 </html>
