added restart button with style for button

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>ROCK-PAPER-SCISSOR</h1>
     </header>
     <main id="selection">
-        <h2>Choose your Weapon:</h2>
+        <h2>Choose your Weapon: ( click )</h2>
         <div>
             <img src="images/rock.jpg" alt="rock">
             <p>Rock</p>
